Fix: better separation between drop down columns Previously content was overlapping in the 'unit of measure' drop down
This change separates content to avoid overlap

Trello link: https://trello.com/c/dDBNxe1O/800-table-cropping-glitch-on-view-measures-workbasket

--- a/app/assets/stylesheets/components/select.scss
+++ b/app/assets/stylesheets/components/select.scss
@@ -124,9 +124,9 @@
 }
 
 .abbreviation--measurement-unit {
-  flex-basis: 6.5em;
-  min-width: 6.5em;
-  width: 6.5em;
+  flex-basis: 9em;
+  min-width: 9em;
+  width: 9em;
 }
 
 .abbreviation--duty-expression {
